--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ div{
     font-size: 30px;
     opacity: 0;
     border-radius: 0 3px 3px 0;
+    user-select: none;
   }
   .next {
     right: 430px;
